--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -64,7 +64,7 @@ body {
 	width: 40px;
 	height: 40px;
 	border: 4px solid white;
-	border-left-color: white;
+	border-left-color: black;
 	border-radius: 50%;
 	animation: spin 1s linear infinite;
 }
