--- a/src/Styles/AppBar.css
+++ b/src/Styles/AppBar.css
@@ -16,7 +16,7 @@
 
 .app-bar__logo img {
 	width: 150px; /* Adjust size as needed */
-	height: 50px; /* Adjust size as needed */
+	height: 40px; /* Adjust size as needed */
 	padding: 10px 20px;
 }
 
@@ -41,8 +41,8 @@
 }
 
 .app-bar__menu::-webkit-scrollbar {
-	width: 0px;
-	height: 0px;
+	width: 2px;
+	height: 2px;
 	background: transparent; /* make scrollbar transparent */
 }
 
@@ -67,13 +67,7 @@
 }
 
 .chip-button.selected {
-	background-color: rgba(235, 37, 70, 0.872);
+	background-color: white;
 	font-weight: bold;
-}
-
-.chip-button:hover {
-	color: rgb(241, 241, 241);
-	/* border: 2px solid rgb(155, 152, 152); */
-	border: 2px solid rgba(255, 255, 255, 0.1);
-	background-color: rgba(255, 255, 255, 0.2);
+	color: black;
 }
