--- a/src/Styles/MovieCard.css
+++ b/src/Styles/MovieCard.css
@@ -5,20 +5,28 @@
 	padding: 20px;
 }
 
-@media (max-width: 768px) {
-	.movie-grid {
-		grid-template-columns: repeat(2, 1fr); /* 2 columns on smaller screens */
+@media (max-width: 1000px) {
+	.movie-card:nth-child(2n + 1):hover {
+		transform-origin: left center !important;
+	}
+
+	.movie-card:nth-child(2n):hover {
+		transform-origin: right center !important;
 	}
 }
 
-@media (max-width: 480px) {
-	.movie-grid {
-		grid-template-columns: 1fr; /* 1 column on even smaller screens */
+@media (max-width: 700px) {
+	.movie-card:nth-child(n + 1):hover {
+		transform-origin: center !important;
+	}
+
+	.movie-card:nth-child(n):hover {
+		transform-origin: center !important;
 	}
 }
 
 .movie-card {
-	width: 300px;
+	/* width: 300px; */
 	height: 450px;
 	background-size: cover;
 	background-position: center;
@@ -39,22 +47,38 @@
 	background: transparent; /* make scrollbar transparent */
 }
 
-.movie-card .movie-details {
-	visibility: hidden;
+.movie-card:nth-child(3n + 1):hover {
+	transform-origin: left center;
 }
 
+.movie-card:nth-child(3n):hover {
+	transform-origin: right center;
+}
+
+/* .movie-card .movie-details {
+	visibility: hidden;
+} */
+
 .movie-card:hover .movie-details {
-	visibility: visible;
-	/* position: absolute;
+	opacity: 1;
+	transform: translateY(0);
+}
+
+.movie-details {
+	/* visibility: visible; */
+	/* height: inherit; */
+	position: absolute;
 	bottom: 0;
 	left: 0;
-	right: 0; */
-	height: inherit;
+	right: 0;
 	padding: 10px;
 	background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
 	color: white;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
+	/* border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px; */
+	opacity: 0;
+	transform: translateY(100%);
+	transition: opacity 0.3s;
 }
 
 .movie-description {
