--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -64,7 +64,7 @@ body {
 	width: 40px;
 	height: 40px;
 	border: 4px solid white;
-	border-left-color: black;
+	border-left-color: blue;
 	border-radius: 50%;
 	animation: spin 1s linear infinite;
 }
@@ -78,5 +78,5 @@ body {
 .loading p {
 	margin-top: 10px;
 	font-size: 14px;
-	color: white;
+	color: blueviolet;
 }
