--- a/src/Styles/DialogComponent.css
+++ b/src/Styles/DialogComponent.css
@@ -26,10 +26,11 @@
 	/* padding: 20px; */
 	border-radius: 8px;
 	max-width: 800px;
+	max-height: calc(100% - 100px);
 	width: 100%;
 	z-index: 1000;
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-
+	overflow: auto;
 	opacity: 0;
 }
 
@@ -38,6 +39,7 @@
 	flex-direction: column;
 	opacity: 1;
 	border-radius: 8px;
+	overflow: hidden;
 	pointer-events: auto;
 }
 
@@ -56,13 +58,20 @@
 /* Close Button */
 .close-button {
 	/* background: gray; */
-	border-radius: 50%;
-
+	background: transparent;
+	color: black;
+	border: 2px solid black;
 	cursor: pointer;
 }
 
 /* Dialog Content */
 .dialog-content {
 	padding: 10px;
-	margin-top: 20px;
+	color: black;
+	overflow: auto;
+}
+
+.dialog-content::-webkit-scrollbar {
+	width: 10px;
+	scrollbar-width: thin;
 }
