--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -61,12 +61,12 @@ body {
 }
 
 .spinner {
-	width: 40px;
-	height: 40px;
+	width: 50px;
+	height: 50px;
 	border: 4px solid white;
 	border-left-color: blue;
 	border-radius: 50%;
-	animation: spin 1s linear infinite;
+	animation: spin 5s linear infinite;
 }
 
 @keyframes spin {
@@ -78,5 +78,5 @@ body {
 .loading p {
 	margin-top: 10px;
 	font-size: 14px;
-	color: blueviolet;
+	color: blue;
 }
